--- a/aws_ec2.yaml
+++ b/aws_ec2.yaml
@@ -1,19 +1,28 @@
-plugin: aws_ec2
-
+# demo.aws_ec2.yml
+plugin: amazon.aws.aws_ec2
 regions:
   - us-east-1
-
-filters:
-  # All instances with their `Environment` tag set to `dev`
-#  tag:Environment: dev
-  # All dev and QA hosts
-  tag:Environment:
-    - dev
-    - stage
-    - prod
-  # Getting the details of running instances only
-  instance-state-name: running
-# Grouping the instances based on tags
+  - us-east-2
 keyed_groups:
-  - key: tags
-    prefix: tag
+  # add hosts to tag_Name_value groups for each aws_ec2 host's tags.Name variable
+  - key: tags.Name
+    prefix: tag_Name_
+    separator: ""
+  # If you have a tag called "Role" which has the value "Webserver", this will add the group
+  # role_Webserver and add any hosts that have that tag assigned to it.
+  - key: tags.Role
+    prefix: role
+groups:
+  # add hosts to the group development if any of the dictionary's keys or values is the word 'devel'
+  development: "'devel' in (tags|list)"
+  # add hosts to the "private_only" group if the host doesn't have a public IP associated to it
+  private_only: "public_ip_address is not defined"
+compose:
+  # use a private address where a public one isn't assigned
+  ansible_host: public_ip_address|default(private_ip_address)
+  # alternatively, set the ansible_host variable to connect with the private IP address without changing the hostname
+  # ansible_host: private_ip_address
+  # if you *must* set a string here (perhaps to identify the inventory source if you have multiple
+  # accounts you want to use as sources), you need to wrap this in two sets of quotes, either ' then "
+  # or " then '
+  some_inventory_wide_string: '"Yes, you need both types of quotes here"'
