--- a/demo.aws_ec2.yml
+++ b/demo.aws_ec2.yml
@@ -1,16 +1,16 @@
 all:
   hosts:
-    mail.example.com:
+    #mail.example.com:
   children:
     webservers:
       hosts:
-        foo.example.com:
-        bar.example.com:
+        44.204.94.107:
+        #bar.example.com:
     dbservers:
       hosts:
-        one.example.com:
-        two.example.com:
-        three.example.com:
+        #one.example.com:
+        #two.example.com:
+       # three.example.com:
     
         
     
